--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
 
   ### 📤 File Handling & Pickers
   image_picker: ^1.2.0
+  file_picker: ^8.1.6
   flutter_cache_manager: ^3.4.1
   path_provider: ^2.1.5
   path: ^1.9.1
