--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -146,6 +146,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   change_app_package_name: ^1.4.0
+  device_preview: ^1.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
