--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   audio_waveforms: ^1.3.0
   just_audio: ^0.10.5
   video_player: ^2.10.0
+  flick_video_player: ^0.9.0
   video_compress: ^3.1.4
   flutter_image_compress: ^2.4.0
   deepar_flutter_plus: ^0.2.0
